Reducing towards JDK 8 dependencies